[package]
name = "CoreServer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
toml = "0.9.8"

# WebSocket
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"

# UUID
uuid = { version = "1.8", features = ["v4", "serde"] }

# Concurrent data structures
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }

# Configuration
config = "0.15.18"

# Hashing and security
bcrypt = "0.17.1"
rand = "0.9.2"

# Network utilities
bytes = "1.7"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Futures utilities - ДОБАВЛЯЕМ!
futures-util = "0.3"

# Command-line parsing
clap = { version = "4.4", features = ["derive"] }




[dev-dependencies]
tokio = { version = "1.40", features = ["full", "rt-multi-thread", "macros"] }
tracing-test = "0.2"
tracing-subscriber = "0.3"

[features]
default = ["server"]
server = []
client = []
dev = ["tracing-subscriber"]

[[bin]]
name = "test_client"
path = "src/bin/test_client.rs"
[[bin]]
name = "test_client2"
path = "src/bin/test_client2.rs"
[[bin]]
name = "advanced_chat"
path = "src/bin/advanced_chat.rs"